tests/error/comptime/check_dereference16.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let &_ = {
			let i = 0;
			i
		};
	});
}
